[gd_scene load_steps=8 format=2]

[ext_resource path="res://Camera/Camera2D.tscn" type="PackedScene" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://Trajectories.gd" type="Script" id=3]
[ext_resource path="res://Shaders/InverseMagneticBillard.gdshader" type="Shader" id=4]
[ext_resource path="res://Panel.gd" type="Script" id=5]
[ext_resource path="res://image.gd" type="Script" id=6]

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 4 )
shader_param/n = null

[node name="InverseMagneticBillard" type="Node2D"]

[node name="Camera2D" parent="." instance=ExtResource( 1 )]

[node name="Trajectories" type="Node2D" parent="."]
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
margin_left = 720.0
margin_top = 40.0
margin_right = 1005.0
margin_bottom = 377.0
script = ExtResource( 5 )

[node name="Button" type="Button" parent="CanvasLayer/Panel"]
margin_left = 4.0
margin_top = 4.0
margin_right = 108.0
margin_bottom = 57.0
text = "Iterate"

[node name="LabelInstructions" type="Label" parent="CanvasLayer/Panel"]
margin_left = 10.0
margin_top = 195.0
margin_right = 249.0
margin_bottom = 283.0

[node name="ButtonStartPos" type="Button" parent="CanvasLayer/Panel"]
margin_left = 6.0
margin_top = 149.0
margin_right = 184.0
margin_bottom = 181.0
text = "Choose new start position"

[node name="ButtonPolygon" type="Button" parent="CanvasLayer/Panel"]
margin_left = 5.0
margin_top = 72.0
margin_right = 167.0
margin_bottom = 100.0
text = "Choose new polygon"

[node name="ButtonClosePolygon" type="Button" parent="CanvasLayer/Panel"]
margin_left = 6.0
margin_top = 106.0
margin_right = 126.0
margin_bottom = 133.0
text = "Close Contour"

[node name="Label" type="Label" parent="CanvasLayer/Panel"]
margin_left = 220.0
margin_top = 7.0
margin_right = 269.0
margin_bottom = 27.0

[node name="TextEdit" type="TextEdit" parent="CanvasLayer/Panel"]
margin_left = 10.0
margin_top = 298.0
margin_right = 253.0
margin_bottom = 327.0
text = "Change radius, default radius is 1 "

[node name="Sprite" type="Sprite" parent="CanvasLayer/Panel"]
material = SubResource( 2 )
position = Vector2( -504.75, 161.375 )
scale = Vector2( 5.11719, 4.05079 )
texture = ExtResource( 2 )
script = ExtResource( 6 )

[connection signal="pressed" from="CanvasLayer/Panel/Button" to="Trajectories" method="_on_Button_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/ButtonStartPos" to="Trajectories" method="_on_ButtonStartPos_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/ButtonPolygon" to="Trajectories" method="_on_ButtonPolygon_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/ButtonClosePolygon" to="Trajectories" method="_on_ButtonClosePolygon_pressed"]
[connection signal="text_changed" from="CanvasLayer/Panel/TextEdit" to="Trajectories" method="_on_TextEdit_text_changed"]
